# talkberry

./: CMakeLists.txt  README.md
demos/: pico-audiobook.uf2  pico-hamradio.uf2
header/: codec2.h  data.h  defines.h  fxpmath.h
header/cmsis/: arm_common_tables.h  arm_const_structs.h  fft_tables.h
src/: codec2.c  helpers.c  interpolate.c  phase.c  quantise.c  sine.c  tables.c
src/cmsis/: arm_bitreversal2.S  arm_cfft_q31.c  arm_rfft_init_q31.c  arm_rfft_q31.c
src/demo/: demo-host.c  demo-pico.c
